--- a/MC2-KisahKata/Info.plist
+++ b/MC2-KisahKata/Info.plist
@@ -62,5 +62,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Baloo2-SemiBold.ttf</string>
+		<string>Baloo2-ExtraBold.ttf</string>
+		<string>Baloo2-Regular.ttf</string>
+		<string>Baloo2-Medium.ttf</string>
+		<string></string>
+	</array>
 </dict>
 </plist>
